2011-03-31  Richard Murray  <murray@malabar.local>

	* examples/pvtol-nested.py: updated stability margin plot to use
	proper calling format for bode().

	* src/statesp.py (_convertToStateSpace): moved slycot import
	to the location where it is actually needed (allows running some
	commands without slycot installed)

	* src/xferfcn.py (_convertToTransferFunction): moved slycot import
	to the location where it is actually needed (allows running some
	commands without slycot installed)

	* src/nichols.py: new file for Nichols plot routines; move
	nichols(), nichols_grid(), closed_loop_contours(), m_circles(),
	n_circles()

	* src/__init__.py, src/freqresp.py, src/matlab.py: updated to match
	new file structure for Nichols charts

	* src/nichols.py (nichols): updated processing of freqresp to take
	into account the fact that return arguments are now a matrix of
	results (even for a SISO system)

2011-03-30  Richard Murray  <murray@malabar.local>

	* tests/: added top level subdirectory, to be used for unit tests.
	The idea in putting the code here is that you can do 'setup.py test'
	during installation to make sure everything is working correctly.
	The test code would normally *not* be callable from the installed
	module. 

	* tests/*_test.py: moved from src/Test*.py

	* setup.py: updated version number.

2011-02-13  Richard Murray  <murray@sumatra.local>

	* src/*.py: added svn:keywords Id properly

	* src/matlab.py (ngrid): added ngrid() from v0.3d

	* src/freqplot.py (nichols_grid, closed_loop_contours, m_circles,
	n_circles): copied over changes from Allan McInnes in v0.3d; ngrid()
	functiality + split out some of the nichols chart code into separate
	functions

2011-02-12  Richard Murray  <murray@sumatra.local>

	* setup.py: updated version number to 0.4a

2010-11-05  Richard Murray  <murray@sumatra.local>

	* external/yottalab.py: New file containing Roberto Bucher's control
	library functions.  OK to start pulling these into the main library,